Moved button to add a new book into the sidebar

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="container">
         <header>
             <h1>Library</h1>
+            <button class="open-button" onclick="openForm()">Add book</button>
         </header>
         <div id="book-section"></div>
-        <button class="open-button" onclick="openForm()">Open Form</button>
         <div class="form-popup" id="myForm">
             <form action="/action_page.php" class="form-container">
                 <h1>Add New Book</h1>
