Added box shadow effect to book cards to give floating effect

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="book-section"></div>
         <div class="form-popup" id="myForm">
             <form action="/action_page.php" class="form-container">
-                <h1>Add New Book</h1>
+                <h1>Add a book</h1>
             
                 <label for="title"><b>Title</b></label>
                 <input id="title-form" type="text" placeholder="Title" name="title" required>
