Added a toggle switch for read book property to display if a book as been read or not

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Library</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/form.css">
+    <link rel="stylesheet" href="styles/toggle.css">
     <script src="scripts/library.js" defer></script>
 </head>
 <body>
